@@ -1,5 +1,16 @@
 2007-12-07  Dan Williams  <dcbw@redhat.com>
 
+	Patch from Christian Persch <chpe@gnome.org>
+
+	* src/vpn-properties/nm-vpn-properties.c
+		- (vpn_druid_vpn_confirm_page_prepare): fix the object the confirm text
+			gets applied to
+		- (init_app): Fix spacing around elements to better conform to HIG
+
+2007-12-07  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Christian Persch <chpe@gnome.org>
+
 	* src/vpn-properties/nm-vpn-properties.c
 		- (main): don't call gtk_init() twice (gnome.org #473287)
 
